# bigfinish-ii

./: Readme.md  pyproject.toml
src/: main.py
src/big_finish/: __init__.py  get_library.py  get_products.py  login.py  process_product.py
src/big_finish/downloader/: __main__.py  downloader.py
src/big_finish/scraper/: __main__.py  scraper.py
