[tool.poetry]
name = "big_finish"
version = "0.1.0"
description = "Tools to Download from the Big Finish Site"
authors = ["Peter Taylor <me@et1.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
pep8 = "^1.7.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
